--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://snizort.com/">
+    <meta property="og:url" content="https://snizort.net/">
     <meta property="og:title" content="St. Columba's Isle - Historic Island Cemetery in Skye">
     <meta property="og:description" content="Explore the history of St. Columba's Isle, a historic burial ground and medieval church site on the Isle of Skye.">
-    <meta property="og:image" content="https://snizort.com/satellite-2019.png">
+    <meta property="og:image" content="https://snizort.net/satellite-2019.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://snizort.com/">
+    <meta property="twitter:url" content="https://snizort.net/">
     <meta property="twitter:title" content="St. Columba's Isle - Historic Island Cemetery in Skye">
     <meta property="twitter:description" content="Explore the history of St. Columba's Isle, a historic burial ground and medieval church site on the Isle of Skye.">
-    <meta property="twitter:image" content="https://snizort.com/satellite-2019.png">
+    <meta property="twitter:image" content="https://snizort.net/satellite-2019.png">
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://snizort.com/">
+    <link rel="canonical" href="https://snizort.net/">
     
     <link rel="stylesheet" href="style.css">
 
@@ -33,7 +33,7 @@
       "@context": "https://schema.org",
       "@type": "TouristAttraction",
       "name": "St. Columba's Isle",
-      "url": "https://snizort.com",
+      "url": "https://snizort.net",
       "description": "Historic burial ground and medieval church site on the Isle of Skye featuring ancient effigies and ruins.",
       "address": {
         "@type": "PostalAddress",
