--- a/index.html
+++ b/index.html
@@ -186,6 +186,9 @@
                     <li>Other photographs &copy; Rob Reinhardt.</li>
                 </ul>
             </div>
+			<div class="section misty end">
+                Anything to add? <a href="mailto:rob@nothingsill.ney">Send an email</a>. 
+            </div>
         </div>
     </div>
 </body>
