--- a/index.html
+++ b/index.html
@@ -184,11 +184,10 @@
                         </ul>
                     </li>
                     <li>Other photographs &copy; Rob Reinhardt.</li>
-                </ul>
+				</ul>
+				<p>Anything to add? Questions, feedback → <a href="mailto:rob@nothingsilly.ner">Send an email</a>.</p>
             </div>
-			<div class="section misty end">
-                Anything to add? <a href="mailto:rob@nothingsill.ney">Send an email</a>. 
-            </div>
+			
         </div>
     </div>
 </body>
