--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                     </li>
                     <li>Other photographs &copy; Rob Reinhardt.</li>
 				</ul>
-				<p>Anything to add? Questions, feedback → <a href="mailto:rob@nothingsilly.ner">Send an email</a>.</p>
+				<p>Anything to add? Questions, feedback → <a href="mailto:rob@nothingsilly.net">Send an email</a>.</p>
             </div>
 			
         </div>
